@@ -1,6 +1,7 @@
 == 1.0.0
-* Changed to 1.0.0 for the sake of having the first official release, even though it is still backwards compatible.
+* Yay! 1.0.0 for no reason! (Kinda.)
 * Added error checking to make sure input parameters to the session are correct.
+* Changed adding expression to not use the given BodyJson and instead, requires the use of just the name of the entity, value, and new expression.
 
 
 == 0.0.3
